# R-Type

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  build.bat  build.sh  readme.md  vcpkg.json
lib/: libr-type-cmda
src/Client/: CMakeLists.txt  main.cpp  udp_client.cpp  udp_client.hh  udp_client.hpp
src/Client/Game/: #Game.cpp#  Game.cpp  Game.hh
src/Client/Network/: Network.cpp  Network.hpp
src/Command/: ACommand.hpp  CMakeLists.txt  ICommand.hh
src/Command/Commands/Boss/Attack/: Attack.cpp  Attack.hh
src/Command/Commands/Boss/Die/: Die.cpp  Die.hh
src/Command/Commands/Boss/Spawn/: Spawn.cpp  Spawn.hh
src/Command/Commands/Enemy/Attack/: Attack.cpp  Attack.hh
src/Command/Commands/Enemy/Damage/: Damage.cpp  Damage.hh
src/Command/Commands/Enemy/Destroy/: Destroy.cpp  Destroy.hh
src/Command/Commands/Enemy/Die/: Die.cpp  Die.hh
src/Command/Commands/Enemy/Spawn/: Spawn.cpp  Spawn.hh
src/Command/Commands/Game_info/Client_connection/: Client_connection.cpp  Client_connection.hh
src/Command/Commands/Game_info/Client_disconnect/: Client_disconnect.cpp  Client_disconnect.hh
src/Command/Commands/Game_info/Create_game/: Create_game.cpp  Create_game.hh
src/Command/Commands/Game_info/Game_result/: Game_result.cpp  Game_result.hh
src/Command/Commands/Game_info/Games_available/: Games_available.cpp  Games_available.hh
src/Command/Commands/Game_info/Join_game/: Join_game.cpp  Join_game.hh
src/Command/Commands/Game_info/Level_complete/: Level_complete.cpp  Level_complete.hh
src/Command/Commands/Game_info/Missing_packages/: Missing_packages.cpp  Missing_packages.hh
src/Command/Commands/Player/Attack/: Attack.cpp  Attack.hh
src/Command/Commands/Player/Die/: Die.cpp  Die.hh
src/Command/Commands/Player/Hit_wall/: Hit_wall.cpp  Hit_wall.hh
src/Command/Commands/Player/Move/: Move.cpp  Move.hh
src/Command/Factory/: Factory.cpp  Factory.hh
src/Command/Invoker/: Command_invoker.cpp  Command_invoker.hh
src/ECS/: CMakeLists.txt  main.cpp
src/ECS/Component/: Position.hpp
src/ECS/Component/AI/: AI.cpp  AI.hh  enemiesTypeEnum.hpp
src/ECS/Component/Background/: Background.hpp
src/ECS/Component/Button/: Button.cpp  Button.hh
src/ECS/Component/ComponentManager/: ComponentManager.hpp  ComponentTypeRegistry.hpp  SparseArray.hpp
src/ECS/Component/Health/: Health.cpp  Health.hh
src/ECS/Component/Hitbox/: Hitbox.cpp  Hitbox.hh
src/ECS/Component/Input/: Input.cpp  Input.hh  enumInput.hpp
src/ECS/Component/Light/: Light.cpp  Light.hh
src/ECS/Component/Music/: Music.cpp  Music.hh
src/ECS/Component/Patapata/: Patapata.hpp
src/ECS/Component/Pod/: Pod.cpp  Pod.hh
src/ECS/Component/Position/: Position.cpp  Position.hpp
src/ECS/Component/Projectile/: Projectile.cpp  Projectile.hh
src/ECS/Component/Render/: Render.cpp  Render.hh
src/ECS/Component/Render2D/: Render2D.cpp  Render2D.hh
src/ECS/Component/Render3D/: Render3D.cpp  Render3D.hh
src/ECS/Component/Rotate/: Rotate.cpp  Rotate.hh
src/ECS/Component/Scale/: Scale.cpp  Scale.hh
src/ECS/Component/Sound/: Sound.cpp  Sound.hh
src/ECS/Component/Text/: Text.cpp  Text.hh
src/ECS/Component/Textfield/: Textfield.cpp  Textfield.hh
src/ECS/Component/Velocity/: Velocity.cpp  Velocity.hh
src/ECS/Component/Volume/: Volume.cpp  Volume.hh
src/ECS/Core/: Core.cpp  Core.hpp
src/ECS/Entity/Button/: Button.cpp  Button.hh
src/ECS/Entity/Enemy/: Enemy.cpp  Enemy.hh
src/ECS/Entity/EntityManager/: EntityManager.cpp  EntityManager.hh
src/ECS/Entity/Missile/: Missile.cpp  Missile.hh
src/ECS/Entity/Player/: Player.cpp  Player.hh
src/ECS/Game/: Game.cpp  Game.hh
src/ECS/RessourcePool/: RessourcePool.cpp  RessourcePool.hh
src/ECS/System/AIFiringProjectile/: AIFiringProjectile.cpp  AIFiringProjectile.hh
src/ECS/System/Background/: Background.cpp  Background.hh
src/ECS/System/ButtonClick/: ButtonClick.cpp  ButtonClick.hh  ButtonClick.hpp
src/ECS/System/Collision/: Collision.cpp  Collision.hh
src/ECS/System/GetDeadEntities/: GetDeadEntities.cpp  GetDeadEntities.hh
src/ECS/System/Hitbox/: Hitbox.cpp  Hitbox.hh
src/ECS/System/InputUpdates/: InputUpdates.cpp  InputUpdates.hh
src/ECS/System/Light/: Light.cpp  Light.hh
src/ECS/System/ProjectileCollision/: ProjectileCollision.cpp  ProjectileCollision.hh
src/ECS/System/Render/: Render.cpp  Render.hh
src/ECS/System/Render2D/: Render2D.cpp  Render2D.hh
src/ECS/System/Render3D/: Render3D.cpp  Render3D.hh
src/ECS/System/RenderButton/: RenderButton.cpp  RenderButton.hh
src/ECS/System/RenderText/: RenderText.cpp  RenderText.hh
src/ECS/System/RenderTextfield/: RenderTextfield.cpp  RenderTextfield.hh
src/ECS/System/System/: System.hpp
src/ECS/System/SystemManager/: SystemManager.hpp
src/ECS/System/SystemVelocity/: SystemVelocity.cpp  SystemVelocity.hpp
src/ECS/System/TextfieldInput/: TextfieldInput.cpp  TextfieldInput.hh
src/ECS/System/UpdateVelocityAI/: UpdateVelocityAI.cpp  UpdateVelocityAI.hh
src/ECS/System/UpdateVelocityPataPata/: UpdateVelocityPataPata.cpp  UpdateVelocityPataPata.hh
src/ECS/System/Velocity/: Velocity.cpp  Velocity.hpp
src/ECS/Utils/: Utils.cpp  Utils.hh
src/MyRaylib/: CMakeLists.txt  MyRaylib.cpp  MyRaylib.hpp  main.cpp
src/Server/: CMakeLists.txt  Client_info.cpp  Client_info.hh  Client_info.hpp  Game_info.cpp  Game_info.hh  main.cpp  udp_client.cpp  udp_client.hh  udp_client.hpp  udp_server.cpp  udp_server.hh  udp_server.hpp
src/Server/Debug/: udp_client  udp_server
src/Server/Parser/EnemySpawnData/: EnemySpawnData.cpp  EnemySpawnData.hh
src/Server/Parser/LoadData/: LoadData.cpp  LoadData.hh
src/Server/Parser/Stage/: #stage1.json#  stage1.json  stage2.json
src/Utils/: CMakeLists.txt  enemiesTypeEnum.hpp
src/Utils/Network/: Network.cpp  Network.hpp
src/Utils/ParametersMap/: ParametersMap.cpp  ParametersMap.hpp
src/Utils/Protocol/: Protocol.cpp  Protocol.hpp
src/Utils/Response/: Response.cpp  Response.hpp
tests/: CMakeLists.txt  EntityManager.cpp  test_unit_test.cpp
tests/ECS/Entity/: EntityManager.cpp
tests/Utils/: Protocol.cpp
(+50 files in other folders)
